f: login flow completed

--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,3 +1,4 @@
 {
-  "serverUrl": "http://localhost:4444/api/v1"
+  "serverUrl": "http://localhost:4444/api/v1",
+  "dbURL": "http://localhost:8080"
 }
