--- a/backend/coffee-server/package.json
+++ b/backend/coffee-server/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/schadokar/coffee-hai#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
