--- a/backend/mysql-go-server/deployments/docker-compose.yaml
+++ b/backend/mysql-go-server/deployments/docker-compose.yaml
@@ -16,17 +16,18 @@ services:
     container_name: mysqldb
     networks:
       - mysql_server
-  # mysql_server_service:
-  #   image: mysql-go-server
-  #   ports:
-  #     - 8080:8080
-  #   environment:
-  #     - DB_URL=mysqldb:3306
-  #     - DB_USER=root
-  #     - DB_PASSWORD=password
-  #     - DB_NAME=coffeedb
-  #   depends_on:
-  #     - mysqldb_service
-  #   container_name: mysql-go-server
-  #   networks:
-  #     - mysql_server
+
+  mysql_server_service:
+    image: mysql-go-server
+    ports:
+      - 8000:8000
+    environment:
+      - DB_URL=mysqldb:3306
+      - DB_USER=root
+      - DB_PASSWORD=password
+      - DB_NAME=coffeedb
+    depends_on:
+      - mysqldb_service
+    container_name: mysql-go-server
+    networks:
+      - mysql_server
