dev: frontend and backend: implemented items

--- a/backend/mysql-go-server/deployments/docker-compose.yaml
+++ b/backend/mysql-go-server/deployments/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     image: mysql-go-server
     ports:
       - 8000:8000
+    volumes:
+      - ../.:/app
     environment:
       - DB_URL=mysqldb:3306
       - DB_USER=root
